# switch-relay

./: pyproject.toml
switch_relay/: cli.py  cli.spec  mapping.py
tests/: test_switch_relay.py
