[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "switch-relay"
version = "0.1.0"
description = ""
authors = [ "Mark Rawls <markrawls96@gmail.com>",]

[tool.poetry.scripts]
sr = 'switch_relay.cli:cli'

[tool.black]
line-length = 95
target-version = [ "py39",]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyinstaller = "^4.3"
